<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hunter.mybloodcall.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    
    <Button
        android:id="@+id/findDonor"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="104dp"
        android:background="@color/Red"
        android:onClick="findDonor"
        android:text="@string/find_donor"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="124dp" />

    <Button
        android:id="@+id/beDonor"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="228dp"
        android:background="@color/Red"
        android:onClick="beDonor"
        android:text="@string/be_donor"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="124dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="72dp"
        android:background="@color/Red"
        android:onClick="MapsActivity"
        android:text="@string/find_all"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beDonor" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/unit_Id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</android.support.constraint.ConstraintLayout>
